moved photo to left to fix overlap

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,7 +4,7 @@
 .site-header {
     border-top: 0px solid $grey-color-dark;
     border-bottom: 4px solid $clemson-purple;
-    min-height: 65px;
+    min-height: 56px;
     background: $clemson-orange;
     // Positioning context for the mobile navigation icon
     position: fixed;
